Cycles 3/6 textures reversed on cube with generated co-ordinates and box mapping #52652

Closed
opened 2017-09-05 10:43:35 +02:00 by John Dennis · 7 comments

System Information
Win 7 64bit - Geforce GTX 670

Blender Version
Broken: 2.78 4bb1e22 and 2.79 7b397cd
Worked: unknown

When applying a texture to a cube in cycles, using generated co-ordinates and a box projection for the image mapping, 3 of the 6 faces have their textures applied back to front (also occurs with object co-ordinates and flat mapping). This behaviour is consistent in the viewport (material and rendered modes) and also in the render result. Adding a cube with generate UV's ticked does not correct this problem.

Generated cube coords Text.png

In the example file and attached image, the cube on the left indicates this behaviour. The cube on the right uses a custom UV map and flat projection for image mapping to achieve what I would consider the most appropriate result, for texturing a simple cubic object.

Exact steps for others to reproduce the error
Add cube
Create material node setup using image texture:

Node setup for cube.png

File example - Cycles cube generated texture coords backwards Packed.blend

**System Information** Win 7 64bit - Geforce GTX 670 **Blender Version** Broken: 2.78 4bb1e22 and 2.79 7b397cd Worked: unknown When applying a texture to a cube in cycles, using generated co-ordinates and a box projection for the image mapping, 3 of the 6 faces have their textures applied back to front (also occurs with object co-ordinates and flat mapping). This behaviour is consistent in the viewport (material and rendered modes) and also in the render result. Adding a cube with generate UV's ticked does not correct this problem. ![Generated cube coords Text.png](https://archive.blender.org/developer/F774372/Generated_cube_coords_Text.png) In the example file and attached image, the cube on the left indicates this behaviour. The cube on the right uses a custom UV map and flat projection for image mapping to achieve what I would consider the most appropriate result, for texturing a simple cubic object. **Exact steps for others to reproduce the error** Add cube Create material node setup using image texture: ![Node setup for cube.png](https://archive.blender.org/developer/F774376/Node_setup_for_cube.png) File example - [Cycles cube generated texture coords backwards Packed.blend](https://archive.blender.org/developer/F774378/Cycles_cube_generated_texture_coords_backwards_Packed.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnDennis

Added subscriber: @JohnDennis

This issue was referenced by blender/cycles@71d4df8e0c

This issue was referenced by blender/cycles@71d4df8e0cf5e74c73022cd5e20f7918c3adf1fc

This issue was referenced by dd8016f708

This issue was referenced by dd8016f7081fb502b969b3c1f7512e00466879eb

Added subscriber: @brecht

Added subscriber: @brecht

I think we can tweak the mapping to avoid this, even if it means break backwards compatibility a bit.

I think we can tweak the mapping to avoid this, even if it means break backwards compatibility a bit.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52652
No description provided.