Fix T52652: Cycles image box mapping has flipped textures.

This breaks backwards compatibility some in that 3 sides will be mapped
differently now, but difficult to avoid and can be considered a bugfix.